# eel891-ml

./: pyproject.toml
trabalho1/: notebook.ipynb
trabalho1/output/: gbm.csv  linearsvc.csv
