[tool.poetry]
name = "eel891-ml"
version = "0.1.0"
description = ""
authors = ["Joao Pedro de Lacerda <jpedrodelacerda@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
seaborn = "^0.11.2"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
